--- a/view/lecturer-main.html
+++ b/view/lecturer-main.html
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="lecturer-result.html">
+                    <a href="/lecturer-result">
                         <i class="pe-7s-upload"></i>
                         <p>Result</p>
                     </a>
