--- a/view/reception-student.html
+++ b/view/reception-student.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Lecturer</title>
+    <title>Reception</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
+
 
     <!-- Bootstrap core CSS     -->
     <link href="css/bootstrap.min.css" rel="stylesheet"/>
@@ -19,18 +20,16 @@
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
+
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
 
     <!--     Fonts and icons     -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' type='text/css'/>
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"/>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="css/pe-icon-7-stroke.css"/>
-
 
 </head>
 <body>
@@ -41,33 +40,27 @@
         <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="#" class="simple-text">
-                    Lecturer
+                    Reception
                 </a>
             </div>
 
             <ul class="nav">
-                <li>
-                    <a href="/lecturer">
+                <li class="active">
+                    <a href="/reception">
                         <i class="pe-7s-home"></i>
                         <p>Home</p>
                     </a>
                 </li>
-                <li class="active">
-                    <a href="/lecturer-module">
-                        <i class="pe-7s-note2"></i>
-                        <p>Module</p>
+                <li>
+                    <a href="/reception-student">
+                        <i class="pe-7s-id"></i>
+                        <p>Manage Student</p>
                     </a>
                 </li>
                 <li>
-                    <a href="/lecturer-result">
-                        <i class="pe-7s-upload"></i>
-                        <p>Result</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="lecturer-notification.html">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
+                    <a href="/reception-lecturer">
+                        <i class="pe-7s-users"></i>
+                        <p>Manage Lecturer</p>
                     </a>
                 </li>
             </ul>
@@ -129,7 +122,6 @@
 
         <div class="content">
             <div class="container-fluid">
-
                 <!-- Tabs with icons on Card -->
                 <div class="card card-nav-tabs">
                     <div class="header header-success">
@@ -138,23 +130,22 @@
                             <div class="nav-tabs-wrapper">
                                 <ul class="nav nav-tabs" data-tabs="tabs">
                                     <li class="active">
-                                        <a href="#create-new" data-toggle="tab">
-                                            <i class="material-icons">note_add</i>
-                                            Create New
+                                        <a href="#create-new-batch" data-toggle="tab">
+                                            <i class="material-icons">group_work</i>
+                                            Batch
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#update" data-toggle="tab">
-                                            <i class="material-icons">update</i>
-                                            Update
+                                        <a href="#register-new-student" data-toggle="tab">
+                                            <i class="material-icons">format_align_center</i>
+                                            New Student
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#view-all" data-toggle="tab">
-                                            <i class="material-icons">view_list</i>
-                                            View All
+                                        <a href="#search-student" data-toggle="tab">
+                                            <i class="material-icons">search</i>
+                                            Search
                                         </a>
-
                                     </li>
                                 </ul>
                             </div>
@@ -162,19 +153,53 @@
                     </div>
                     <div class="content">
                         <div class="tab-content">
-                            <div class="tab-pane active" id="create-new">
+                            <div class="tab-pane active" id="create-new-batch">
                                 <div class="card">
                                     <div class="header">
-                                        <h4 class="title">Create New Module</h4>
+                                        <h4 class="title">Register New Batch</h4>
                                     </div>
                                     <div class="content">
-                                        <form id="create-new-module">
+                                        <form id="create-new-batch-form">
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Module Code</label>
-                                                        <input type="text" class="form-control" placeholder="XX0000"
-                                                               name="cn-moduleCode">
+                                                        <label>Batch ID</label>
+                                                        <input type="text" class="form-control" placeholder="" name="cn-batch-id">
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <button type="submit" class="btn btn-info btn-fill">Create</button>
+                                            <div class="clearfix"></div>
+                                        </form>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">Registered Batches</h4>
+                                    </div>
+                                    <div class="content">
+                                        <div class="table-responsive table-full-width">
+                                            <table class="table table-hover table-striped" id="batch-table">
+                                                <tbody>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane" id="register-new-student">
+                                <div class="card">
+                                    <div class="header">
+                                        <h4 class="title">Register New Student</h4>
+                                    </div>
+                                    <div class="content">
+                                        <form id="register-new-student-form">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Index No</label>
+                                                        <input type="text" class="form-control" placeholder="" name="st-index-no">
                                                     </div>
                                                 </div>
                                             </div>
@@ -182,9 +207,8 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Module Name</label>
-                                                        <input type="text" class="form-control" placeholder=""
-                                                               name="cn-moduleName">
+                                                        <label>Name</label>
+                                                        <input type="text" class="form-control" placeholder="" name="st-name">
                                                     </div>
                                                 </div>
                                             </div>
@@ -192,98 +216,72 @@
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Credits</label>
-                                                        <input type="text" class="form-control" placeholder="2.0"
-                                                               name="cn-credits">
+                                                        <label>Batch</label>
+                                                        <select class="form-control" name="st-batch"></select>
                                                     </div>
                                                 </div>
                                             </div>
 
-                                            <button type="submit" class="btn btn-info btn-fill pull-left">Create
+                                            <button type="submit" class="btn btn-info btn-fill">
+                                                Submit
                                             </button>
                                             <div class="clearfix"></div>
                                         </form>
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab-pane" id="update">
+                            <div class="tab-pane" id="search-student">
                                 <div class="card">
                                     <div class="header">
-                                        <h4 class="title">Update Module</h4>
+                                        <h4 class="title">Search Student</h4>
                                     </div>
                                     <div class="content">
-                                        <form id="update-module">
+                                        <form id="search-student-form">
                                             <div class="row">
                                                 <div class="col-md-6">
                                                     <div class="form-group">
-                                                        <label>Module Code</label>
-                                                        <div class="row">
-                                                            <div class="col-md-8">
-                                                                <input type="text" class="form-control"
-                                                                       placeholder="XX0000" name="up-moduleCode">
-                                                            </div>
-                                                            <div class="col-md-4">
-                                                                <input type="button"
-                                                                       class="form-control btn btn-fill btn-info"
-                                                                       value="Search" id="search-btn">
-                                                            </div>
-                                                        </div>
+                                                        <label>Index No</label>
+                                                        <input type="text" class="form-control" name="sc-index-no">
                                                     </div>
                                                 </div>
                                             </div>
-
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label>Module Name</label>
-                                                        <input type="text" class="form-control" placeholder=""
-                                                               name="up-moduleName">
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="row">
-                                                <div class="col-md-6">
-                                                    <div class="form-group">
-                                                        <label>Credits</label>
-                                                        <input type="text" class="form-control" placeholder="2.0"
-                                                               name="up-credits">
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <button type="submit" class="btn btn-info btn-fill pull-left">Update
+                                            <button type="submit" class="btn btn-fill btn-info">
+                                                Search
                                             </button>
                                             <div class="clearfix"></div>
                                         </form>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="tab-pane" id="view-all">
                                 <div class="card">
                                     <div class="header">
-                                        <h4 class="title">View All Modules</h4>
+                                        <h4 class="title">Search Results</h4>
                                     </div>
-                                    <div class="content table-responsive table-full-width">
-                                        <table class="table table-hover table-striped" id="module-table">
-                                            <thead>
-                                            <tr>
-                                                <th>Code</th>
-                                                <th>Name</th>
-                                                <th>Credits</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            </tbody>
-                                        </table>
-
+                                    <div class="content">
+                                        <form id="search-student-result-form">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Name</label>
+                                                        <input type="text" class="form-control" name="sc-name" readonly>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <div class="form-group">
+                                                        <label>Batch</label>
+                                                        <input type="text" class="form-control" name="sc-batch" readonly>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="clearfix"></div>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- End Tabs with icons on Card -->
             </div>
         </div>
 
@@ -298,12 +296,15 @@
     </div>
 </div>
 
+
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-<script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="js/bootstrap.min.js" type="text/javascript"></script>
+
+<!--  Checkbox, Radio & Switch Plugins -->
+<script src="js/bootstrap-checkbox-radio-switch.js"></script>
 
 <!--  Charts Plugin -->
 <script src="js/chartist.min.js"></script>
@@ -319,6 +320,6 @@
 
 <script src="/socket.io/socket.io.js"></script>
 
-<script src="js/usr/lecturer-module.js"></script>
+<script src="js/usr/reception-student.js"></script>
 
 </html>
