Student | Module Support

--- a/view/lecturer-module.html
+++ b/view/lecturer-module.html
@@ -156,6 +156,13 @@
                                         </a>
 
                                     </li>
+                                    <li>
+                                        <a href="#enroll" data-toggle="tab">
+                                            <i class="material-icons">alarm</i>
+                                            Manage Enrollments
+                                        </a>
+
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -280,6 +287,7 @@
                                     </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -310,6 +318,7 @@
 
 <!--  Notifications Plugin    -->
 <script src="js/bootstrap-notify.js"></script>
+<script src="js/bootstrap-datepicker.js"></script>
 
 <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
 <script src="js/light-bootstrap-dashboard.js"></script>
