--- a/view/lecturer-result.html
+++ b/view/lecturer-result.html
@@ -274,7 +274,7 @@
                                                     <div class="form-group">
                                                         <label>Module Name</label>
                                                         <input type="text" class="form-control" placeholder=""
-                                                               name="um-module-name">
+                                                               name="um-module-name" readonly>
                                                     </div>
                                                 </div>
                                             </div>
@@ -284,7 +284,7 @@
                                                     <div class="form-group">
                                                         <label>Credits</label>
                                                         <input type="text" class="form-control" placeholder="2.0"
-                                                               name="um-credits">
+                                                               name="um-credits" readonly>
                                                     </div>
                                                 </div>
                                             </div>
@@ -293,7 +293,7 @@
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label>Batch</label>
-                                                        <input type="text" class="form-control" name="um-batch">
+                                                        <input type="text" class="form-control" name="um-batch" readonly>
                                                     </div>
                                                 </div>
                                             </div>
@@ -302,7 +302,7 @@
                                                 <div class="col-md-6">
                                                     <div class="form-group">
                                                         <label>Semester</label>
-                                                        <input type="text" class="form-control" name="um-semester">
+                                                        <input type="text" class="form-control" name="um-semester" readonly>
                                                     </div>
                                                 </div>
                                             </div>
@@ -378,6 +378,7 @@
                                                 <th>Name</th>
                                                 <th>Credits</th>
                                                 <th>Batch</th>
+                                                <th>Semester</th>
                                             </tr>
                                             </thead>
                                             <tbody>
