--- a/view/lecturer-statistics.html
+++ b/view/lecturer-statistics.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Student</title>
+    <title>Lecturer</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
@@ -20,16 +20,16 @@
     <!--  Light Bootstrap Table core CSS    -->
     <link href="css/light-bootstrap-dashboard.css" rel="stylesheet"/>
 
-
     <!--  CSS for Demo Purpose, don't include it in your project     -->
     <link href="css/demo.css" rel="stylesheet"/>
 
-
     <!--     Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' type='text/css'/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="css/pe-icon-7-stroke.css"/>
 
 </head>
 <body>
@@ -39,26 +39,38 @@
 
         <div class="sidebar-wrapper">
             <div class="logo">
-                <a href="lecturer-main.html" class="simple-text">
-                    150528X
+                <a href="#" class="simple-text">
+                    Lecturer
                 </a>
             </div>
 
             <ul class="nav">
                 <li>
-                    <a href="/student">
+                    <a href="/lecturer">
                         <i class="pe-7s-home"></i>
                         <p>Home</p>
                     </a>
                 </li>
-                <li class="active">
-                    <a href="/student-result">
+                <li>
+                    <a href="/lecturer-module">
+                        <i class="pe-7s-note2"></i>
+                        <p>Module</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="/lecturer-result">
                         <i class="pe-7s-upload"></i>
                         <p>Result</p>
                     </a>
                 </li>
+                <li class="active">
+                    <a href="/lecturer-statistics">
+                        <i class="pe-7s-graph1"></i>
+                        <p>Statistics</p>
+                    </a>
+                </li>
                 <li>
-                    <a href="/student-notification">
+                    <a href="lecturer-notification.html">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
                     </a>
@@ -86,9 +98,9 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-globe"></i>
                                 <b class="caret"></b>
-                                <span class="notification">1</span>
+                                <span class="notification">5</span>
                             </a>
-                            <ul class="dropdown-menu" id="notifications">
+                            <ul class="dropdown-menu">
                                 <li><a href="#">Notification 1</a></li>
                                 <li><a href="#">Notification 2</a></li>
                                 <li><a href="#">Notification 3</a></li>
@@ -123,49 +135,65 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="card">
+                    <div class="header">
+                        <h4 class="title">Select Module</h4>
+                    </div>
                     <div class="content">
-                        <table class="table table-hover table-striped" id="result-table">
-                            <thead>
-                            <tr>
-                                <th>Module Code</th>
-                                <th>Name</th>
-                                <th>Credits</th>
-                                <th>Grade</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
                         <div class="row">
-                            <div class="col-sm-3">
+                            <div class="col-md-6">
                                 <div class="form-group">
-                                    <label class="form-control">Total GPA</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="total-gpa" readonly>
+                                    <select name="module-code" class="form-control"></select>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Statistics</h4>
-                    </div>
-                    <div class="content text-center">
-                        <div class="content">
-                            <div id="chartActivity" class="ct-chart">
-                            </div>
 
-                            <div class="footer">
-                                <hr>
-                                <div class="stats">
-                                    <i class="fa fa-check"></i> Data information certified
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Module Details</h4>
+                            </div>
+                            <div class="content table-responsive table-full-width">
+                                <table class="table table-hover table-striped">
+                                    <tr>
+                                        <td>Module Name</td>
+                                        <td>Graph Theory</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card ">
+                            <div class="header">
+                                <h4 class="title">Analysis</h4>
+                            </div>
+                            <div class="content">
+                                <div id="chartActivity" class="ct-chart">
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">Results</h4>
+                    </div>
+                    <div class="content table-full-width table-responsive">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <td>Index</td>
+                                <td>Name</td>
+                                <td>Grade</td>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
@@ -178,7 +206,6 @@
                 </p>
             </div>
         </footer>
-
     </div>
 </div>
 
@@ -186,7 +213,7 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="js/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
@@ -194,6 +221,35 @@
 
 <!--  Charts Plugin -->
 <script src="js/chartist.min.js"></script>
+<script>
+    var data = {
+        labels: ['A+', 'A', 'A-', 'B+', 'B', 'B-', 'C+', 'C', 'C-', 'D', 'F', 'I-WE'],
+        series: [
+            [5, 10, 7, 30, 8, 3, 6, 4, 8, 0, 0, 1]
+        ]
+    };
+
+    var options = {
+        seriesBarDistance: 1,
+        axisX: {
+            showGrid: false
+        },
+        height: "245px"
+    };
+
+    var responsiveOptions = [
+        ['screen and (max-width: 640px)', {
+            seriesBarDistance: 5,
+            axisX: {
+                labelInterpolationFnc: function (value) {
+                    return value[0];
+                }
+            }
+        }]
+    ];
+
+    Chartist.Bar('#chartActivity', data, options, responsiveOptions);
+</script>
 
 <!--  Notifications Plugin    -->
 <script src="js/bootstrap-notify.js"></script>
@@ -201,9 +257,13 @@
 <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
 <script src="js/light-bootstrap-dashboard.js"></script>
 
-<!-- Custom imports -->
+<!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
+<script src="js/demo.js"></script>
+
+<script src="js/xlsx.full.min.js"></script>
+
 <script src="/socket.io/socket.io.js"></script>
 
-<script src="js/usr/student-result.js"></script>
+<script src="js/usr/lecturer-statistics.js"></script>
 
 </html>
